<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardBuku"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#EDEBEB"
            app:cardCornerRadius="5dp">
            <ImageView
                android:id="@+id/ivGambar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="30dp">
            <TextView
                android:id="@+id/tvNamaBuku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/homelon"
                android:textColor="#020000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/tvHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/rp_15000"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/tvPengarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/gramedia"
                android:textSize="16sp"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>